# papermind

./: .gitignore  CLAUDE.md  LICENSE  PORTS.md  PROJECT.md  README.md  ROADMAP.md  STACK.md  install.sh  manage.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  STACK.md  fly.toml  pyproject.toml
backend/app/: auth_deps.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/cli/: create_user.py
backend/app/loaders/: markitdown_loader.py
backend/app/routers/: ask.py  auth.py  documents.py  graph.py  health.py
backend/app/services/: auth.py  chunker.py  claude.py  embeddings.py  extraction.py  graph.py  graph_rag.py  openai_provider.py  qdrant.py  tools.py
backend/scripts/: graph_experiment.py  retrieval_experiment.py
backend/tests/: conftest.py  test_ask.py  test_auth.py  test_chunker.py  test_documents.py  test_embeddings.py  test_extraction.py  test_graph.py  test_graph_rag.py  test_graph_router.py  test_loaders.py  test_openai_provider.py  test_qdrant.py  test_tools.py
docs/: deploy.md  graph-experiment.md  models.md  retrieval-experiment.md  retro.md
frontend/: Dockerfile  STACK.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  GraphView.tsx  api.ts
infra/: STACK.md  docker-compose.yml
samples/: ai-landscape-2026.md
scripts/: deploy.sh  dev.sh  down.sh
