[project]
name = "papermind-backend"
version = "0.1.0"
description = "PaperMind backend — RAG over arbitrary documents using the Claude API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "anthropic>=0.40",
    "openai>=1.55",
    "qdrant-client>=1.12",
    "neo4j>=5.20",
    "sentence-transformers>=3.3",
    "voyageai>=0.3",
    "markitdown[pdf,docx,pptx,xlsx]>=0.0.1a3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "python-docx>=1.1",
    "fpdf2>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Depends/File/Query/etc. in argument defaults as sentinels —
# this is the canonical pattern, not the B008 antipattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
